Introduce Spotbugs plugin